module12/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
   name: my-app-deployment 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels: 
        app: my-app  
    spec:
      containers:
        - name: my-app
          image: my-app:k8s
          imagePullPolicy: IfNotPresent
