module12/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  -  host: myapp.local
     http:
       paths:
         - path: /app
           pathType: Prefix
           backend:
             service:
               name: app-service
               port:
                 number: 80
